--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
         
         #scratch-container { position: relative; width: 280px; height: 150px; background: #fff; border-radius: 15px; overflow: hidden; margin: 20px auto; box-shadow: 0 0 20px rgba(255,255,255,0.2); }
         #scratch-canvas { position: absolute; top: 0; left: 0; cursor: crosshair; z-index: 2; touch-action: none; }
-        .scratch-content { position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background: #ff4d6d; color: white; font-family: 'Dancing Script'; font-size: 20px; padding: 20px; z-index: 1; }
+        .scratch-content { position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background: #ff4d6d; color: white; font-family: 'Dancing Script'; font-size: 18px; padding: 15px; z-index: 1; }
 
         #meter-container { width: 100%; height: 20px; background: rgba(255,255,255,0.1); border-radius: 10px; margin: 15px 0; display: none; overflow: hidden; border: 1px solid #ff4d6d; }
         #meter-fill { width: 0%; height: 100%; background: linear-gradient(to right, #ff4d6d, #ffd700); transition: width 2s ease-in-out; }
 
         #balloon-container { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #1a0011; z-index: 99999; display: flex; flex-direction: column; justify-content: center; align-items: center; cursor: pointer; }
-        .balloon { width: 120px; height: 150px; background: #ff4d6d; border-radius: 50% 50% 50% 50% / 45% 45% 55% 55%; position: relative; box-shadow: 0 10px 30px rgba(255,77,109,0.5); animation: float 2s ease-in-out infinite; }
+        .balloon { width: 110px; height: 140px; background: #ff4d6d; border-radius: 50% 50% 50% 50% / 45% 45% 55% 55%; position: relative; box-shadow: 0 10px 30px rgba(255,77,109,0.5); animation: float 2s ease-in-out infinite; }
         .balloon::before { content: "📍"; position: absolute; top: -20px; right: -5px; font-size: 35px; }
-        @keyframes float { 0%, 100% { transform: translateY(0) rotate(-2deg); } 50% { transform: translateY(-30px) rotate(2deg); } }
+        @keyframes float { 0%, 100% { transform: translateY(0) rotate(-2deg); } 50% { transform: translateY(-20px) rotate(2deg); } }
 
         #password-screen { display: none; flex-direction: column; align-items: center; z-index: 10000; }
         .pass-input { padding: 15px; width: 280px; border-radius: 12px; border: 2px solid #ffd700; background: rgba(255,255,255,0.1); color: white; font-size: 18px; text-align: center; margin: 20px 0; }
@@ -28,12 +28,17 @@
         .btn-style { background: linear-gradient(45deg, #ffd700, #ff8c00); color: #000; padding: 15px 40px; border: none; border-radius: 50px; font-weight: bold; font-size: 16px; cursor: pointer; margin-top: 15px; }
         .cursive-font { font-family: 'Dancing Script', cursive; font-size: 26px; color: #ff4d6d; line-height: 1.5; }
         .type-box { background: rgba(255,255,255,0.1); padding: 18px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.2); width: 100%; min-height: 80px; font-style: italic; }
-        #cam-box { width: 200px; height: 200px; border-radius: 50%; border: 5px solid #fff; overflow: hidden; margin: 10px 0; position: relative; }
+        #cam-box { width: 190px; height: 190px; border-radius: 50%; border: 5px solid #fff; overflow: hidden; margin: 10px 0; }
         video { width: 100%; height: 100%; object-fit: cover; transform: scaleX(-1); }
+
+        /* Final Wishing Animation */
+        .wish-text { font-family: 'Dancing Script', cursive; font-size: 35px; color: #fff; text-shadow: 0 0 10px #ff4d6d, 0 0 20px #ff4d6d, 0 0 40px #ff4d6d; animation: pulse 1.5s infinite; }
+        @keyframes pulse { 0%, 100% { transform: scale(1); opacity: 1; } 50% { transform: scale(1.1); opacity: 0.8; } }
+
         .flower { position: absolute; top: -50px; font-size: 20px; z-index: 1; pointer-events: none; animation: fall linear infinite; }
         @keyframes fall { to { transform: translateY(110vh) rotate(360deg); } }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-        .arrow { font-size: 30px; animation: bounce 1s infinite; margin-top: 5px; color: #ffd700; }
+        .arrow { font-size: 30px; animation: bounce 1s infinite; color: #ffd700; }
         @keyframes bounce { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(10px); } }
     </style>
 </head>
@@ -70,30 +75,36 @@
         <button id="scratch-btn" class="btn-style" style="display:none;" onclick="go(6)">Dekho kya hai? 🎁</button>
     </div>
 
-    <div id="step6" class="step">
-        <h1 style="color: #ffd700; font-family: 'Dancing Script'; font-size: 35px;">Best thing about 2025... ✨</h1>
-        <button class="btn-style" onclick="openCam()">See Reality 🤳</button>
-    </div>
+    <div id="step6" class="step"><h1 style="color: #ffd700; font-family: 'Dancing Script'; font-size: 35px;">Best thing about 2025... ✨</h1><button class="btn-style" onclick="openCam()">See Reality 🤳</button></div>
 
     <div id="step7" class="step">
-        <p class="cursive-font" style="color: #ffd700; font-size: 22px;">2025 ka sabse khas gift mere liye ❤️</p>
+        <p class="cursive-font" style="color: #ffd700; font-size: 20px;">2025 ka sabse khas gift mere liye ❤️</p>
         <div class="arrow">⬇️</div>
         <div id="cam-box"><video id="video" autoplay playsinline></video></div>
-        <div class="type-box" id="t1" style="margin-top: 10px;"></div>
+        <div class="type-box" id="t1"></div>
         <button class="btn-style" onclick="go(8)">Next ❤️</button>
     </div>
 
     <div id="step8" class="step"><div class="type-box" id="t2"></div><button class="btn-style" onclick="go(9)">Final ❤️</button></div>
-    <div id="step9" class="step"><div class="type-box" id="t3"></div><h1 class="cursive-font" style="font-size: 35px; color: #ff4d6d; margin-top: 15px;">Happy New Year 2026</h1><button class="btn-style" onclick="go(10)">One More ✨</button></div>
-    <div id="step10" class="step"><div class="type-box cursive-font" id="t-mila"></div><button class="btn-style" onclick="go(11)">Last Thing ❤️</button></div>
+    <div id="step9" class="step"><div class="type-box" id="t3"></div><h1 class="cursive-font" style="font-size: 35px; color: #ff4d6d; margin-top: 15px;">Happy New Year 2026</h1><button class="btn-style" onclick="go(10)">Check Now 💖</button></div>
 
-    <div id="step11" class="step">
+    <div id="step10" class="step">
         <p class="cursive-font">How much I love you?</p>
         <div id="meter-container"><div id="meter-fill"></div></div>
         <p id="percent" style="font-weight:bold; color:#ffd700; font-size:24px;">0%</p>
-        <div class="type-box cursive-font" id="t-final" style="margin-top:15px; display:none;"></div>
-        <button id="final-btn" class="btn-style" onclick="startLoveMeter()">Check Now 💖</button>
-        <p id="forever-text" style="color: #ffd700; font-weight: bold; margin-top: 20px; display:none; letter-spacing: 2px;">FOREVER & ALWAYS 💑</p>
+        <div class="type-box cursive-font" id="t-final" style="margin-top:10px; display:none;"></div>
+        <button id="final-btn" class="btn-style" onclick="startLoveMeter()">Check 💖</button>
+    </div>
+
+    <div id="step11" class="step">
+        <div class="type-box" id="t-special" style="text-align: justify; font-size: 14px; line-height: 1.6;"></div>
+        <button class="btn-style" onclick="go(12)">Last Thing... ❤️</button>
+    </div>
+
+    <div id="step12" class="step">
+        <div class="wish-text">Wishing you a very very happy new year khdusain.</div>
+        <h1 style="font-size: 45px; color: #ffd700; margin-top: 20px; font-family: 'Dancing Script';">Happy New Year 2026</h1>
+        <p style="margin-top: 20px; letter-spacing: 2px; color: #ff4d6d;">Always with you... ❤️</p>
     </div>
 
     <script>
@@ -104,48 +115,28 @@
             const clientX = e.clientX || (e.touches && e.touches[0].clientX);
             const clientY = e.clientY || (e.touches && e.touches[0].clientY);
             if(!clientX) return;
-            const heart = document.createElement('div');
-            heart.className = 'tap-heart'; heart.innerHTML = '❤️';
-            heart.style.left = clientX + 'px'; heart.style.top = clientY + 'px';
-            heart.style.position = 'absolute'; heart.style.pointerEvents = 'none';
-            heart.style.animation = 'flyUp 1s linear forwards';
-            document.body.appendChild(heart);
-            setTimeout(() => heart.remove(), 1000);
+            const h = document.createElement('div'); h.className = 'tap-heart'; h.innerHTML = '❤️';
+            h.style.left = clientX + 'px'; h.style.top = clientY + 'px';
+            h.style.position = 'absolute'; h.style.pointerEvents = 'none'; h.style.animation = 'flyUp 1s linear forwards';
+            document.body.appendChild(h); setTimeout(() => h.remove(), 1000);
         }
 
         function handlePop() {
             document.getElementById('mainBalloon').style.transform = "scale(0)";
-            setTimeout(() => {
-                document.getElementById('balloon-container').style.display = 'none';
-                document.getElementById('password-screen').style.display = 'flex';
-                playMusic();
-            }, 200);
+            setTimeout(() => { document.getElementById('balloon-container').style.display = 'none'; document.getElementById('password-screen').style.display = 'flex'; playMusic(); }, 200);
         }
 
-        function checkPassword() {
-            if(document.getElementById('passInput').value.toLowerCase().trim() === "miss you") {
-                document.getElementById('password-screen').style.display = "none";
-                go('A');
-            } else { alert("Pahle jo bolte ho wo bolo! ❤️"); }
-        }
+        function checkPassword() { if(document.getElementById('passInput').value.toLowerCase().trim() === "miss you") { document.getElementById('password-screen').style.display = "none"; go('A'); } else { alert("Galat hai! ❤️"); } }
 
         function startLoveMeter() {
-            document.getElementById('final-btn').style.display = 'none';
-            document.getElementById('meter-container').style.display = 'block';
-            let fill = document.getElementById('meter-fill');
-            let perc = document.getElementById('percent');
-            let count = 0;
+            document.getElementById('final-btn').style.display = 'none'; document.getElementById('meter-container').style.display = 'block';
+            let fill = document.getElementById('meter-fill'); let perc = document.getElementById('percent'); let count = 0;
             let interval = setInterval(() => {
-                count += 1;
-                fill.style.width = count + '%';
-                perc.innerHTML = count + '%';
+                count += 1; fill.style.width = count + '%'; perc.innerHTML = count + '%';
                 if(count >= 100) {
-                    clearInterval(interval);
-                    perc.innerHTML = "Infinite ∞";
-                    document.getElementById('t-final').style.display = 'block';
-                    document.getElementById('forever-text').style.display = 'block';
-                    type("Naya saal, naye sapne, aur wahi mera purana wala saccha pyaar. I love you!", "t-final", 60);
-                    document.body.style.background = "radial-gradient(circle, #800000, #000)";
+                    clearInterval(interval); perc.innerHTML = "Infinite ∞"; document.getElementById('t-final').style.display = 'block';
+                    type("Naya saal, naye sapne, aur wahi mera purana wala saccha pyaar. I love you!", "t-final", 50);
+                    setTimeout(() => { let b = document.createElement('button'); b.className = 'btn-style'; b.innerHTML = "Read My Heart ❤️"; b.onclick = () => go(11); document.getElementById('step10').appendChild(b); }, 3000);
                 }
             }, 30);
         }
@@ -153,61 +144,32 @@
         function go(n) {
             document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
             document.getElementById('step' + n).classList.add('active');
-            if(n === 5) initScratch();
-            playMusic();
-            if(n === 3) type("Naya saal toh har saal aata hai, par meri khushi tumse shuru hokar tum par hi khatam hoti hai. Dua hai ki ye saal humari mohabbat ko aur gehra kare. Happy New Year, my love!", "t-ny", 50);
-            if(n === 4) type("Is naye saal mein bas ek hi tamanna hai, ki tumhari muskurahat kabhi kam na ho aur mera haath hamesha tumhare haath mein rahe.", "t-tamanna", 50);
-            if(n === 7) type("Hmesa sath rhna motu . Me chahta hu life ka har saal tmhare sth suru ho or tum pr hi khtm .. I need you .", "t1", 45);
-            if(n === 8) type("Love you so much motu. Love you khdusain. Love you love you beta ji love you soooooooo much. ❤️", "t2", 45);
-            if(n === 9) type("Thanks for coming in my life and Thank you for giving me a place in your life. You are the most beautiful part of my life. I always want to be with you.", "t3", 45);
-            if(n === 10) type("Tum mile toh sab mila, naye saal se ab aur kya maangu?", "t-mila", 55);
+            if(n === 5) initScratch(); playMusic();
+            if(n === 3) type("Naya saal toh har saal aata hai, par meri khushi tumse shuru hokar tum par hi khatam hoti hai. Dua hai ki ye saal humari mohabbat ko aur gehra kare. Happy New Year, my love!", "t-ny", 40);
+            if(n === 4) type("Is naye saal mein bas ek hi tamanna hai, ki tumhari muskurahat kabhi kam na ho aur mera haath hamesha tumhare haath mein rahe.", "t-tamanna", 40);
+            if(n === 7) type("Hmesa sath rhna motu . Me chahta hu life ka har saal tmhare sth suru ho or tum pr hi khtm .. I need you .", "t1", 40);
+            if(n === 8) type("Love you so much motu. Love you khdusain. Love you love you beta ji love you soooooooo much. ❤️", "t2", 40);
+            if(n === 9) type("Thanks for coming in my life and Thank you for giving me a place in your life. You are the most beautiful part of my life. I always want to be with you.", "t3", 40);
+            if(n === 11) type("Motu hmesa sath rhna or hmesa support Krna . Or apne relation pr aanch mat aane dena beta . Me hmesa tumhare sath rahna chahta hu . Life k hr pal tmse share Krna chahta hu life ki har khusi or dukh tmhare sth baatna chahta hu hmesa mere sath rhna bas .. New year ki ek or wish hai ki kabhi mere wajah se or na kisi bajah or bajah se tmhe takleef n ho .. I always want to be yours.", "t-special", 40);
         }
 
         function initScratch() {
-            const canvas = document.getElementById('scratch-canvas');
-            const ctx = canvas.getContext('2d');
-            ctx.fillStyle = '#C0C0C0'; ctx.fillRect(0, 0, canvas.width, canvas.height);
-            ctx.globalCompositeOperation = 'destination-out';
-            let scratched = 0;
-            function scratch(e) {
-                e.preventDefault();
-                const rect = canvas.getBoundingClientRect();
-                const x = (e.clientX || (e.touches && e.touches[0].clientX)) - rect.left;
-                const y = (e.clientY || (e.touches && e.touches[0].clientY)) - rect.top;
-                ctx.beginPath(); ctx.arc(x, y, 25, 0, Math.PI * 2); ctx.fill();
-                scratched++; if(scratched > 50) document.getElementById('scratch-btn').style.display = 'block';
-            }
-            canvas.addEventListener('mousemove', scratch);
-            canvas.addEventListener('touchmove', scratch);
+            const canvas = document.getElementById('scratch-canvas'); const ctx = canvas.getContext('2d');
+            ctx.fillStyle = '#C0C0C0'; ctx.fillRect(0, 0, canvas.width, canvas.height); ctx.globalCompositeOperation = 'destination-out';
+            let sc = 0; canvas.addEventListener('touchmove', (e) => { e.preventDefault(); const r = canvas.getBoundingClientRect(); const x = e.touches[0].clientX - r.left; const y = e.touches[0].clientY - r.top; ctx.beginPath(); ctx.arc(x, y, 25, 0, Math.PI * 2); ctx.fill(); sc++; if(sc > 50) document.getElementById('scratch-btn').style.display = 'block'; });
         }
 
-        function type(txt, id, speed) {
-            let i = 0; let el = document.getElementById(id); el.innerHTML = "";
-            function run() { if(i < txt.length) { el.innerHTML += txt.charAt(i); i++; setTimeout(run, speed); } }
-            run();
-        }
-
+        function type(txt, id, spd) { let i = 0; let el = document.getElementById(id); el.innerHTML = ""; function run() { if(i < txt.length) { el.innerHTML += txt.charAt(i); i++; setTimeout(run, spd); } } run(); }
         function playMusic() { if(!musicStarted) { audio.play().catch(() => {}); musicStarted = true; } }
-
-        async function openCam() {
-            go(7);
-            try {
-                let stream = await navigator.mediaDevices.getUserMedia({ video: true });
-                document.getElementById('video').srcObject = stream;
-            } catch (e) { console.log("Cam error"); }
-        }
+        async function openCam() { go(7); try { let s = await navigator.mediaDevices.getUserMedia({ video: true }); document.getElementById('video').srcObject = s; } catch (e) { alert("Camera allow karein ❤️"); } }
 
         setInterval(() => {
-            let f = document.createElement('div'); f.className = 'flower';
-            f.innerHTML = ['🌹','❤️','✨','🌸'][Math.floor(Math.random()*4)];
-            f.style.left = Math.random()*100 + 'vw';
-            f.style.animationDuration = (Math.random()*3+2) + 's';
-            document.body.appendChild(f);
-            setTimeout(() => f.remove(), 5000);
+            let f = document.createElement('div'); f.className = 'flower'; f.innerHTML = ['🌹','❤️','🌸'][Math.floor(Math.random()*3)];
+            f.style.left = Math.random()*100 + 'vw'; f.style.animationDuration = (Math.random()*3+2) + 's';
+            document.body.appendChild(f); setTimeout(() => f.remove(), 5000);
         }, 500);
     </script>
-    <style>
-        @keyframes flyUp { 0% { transform: translateY(0) scale(1); opacity: 1; } 100% { transform: translateY(-150px) scale(2); opacity: 0; } }
-    </style>
+    <style> @keyframes flyUp { 0% { transform: translateY(0) scale(1); opacity: 1; } 100% { transform: translateY(-150px) scale(2); opacity: 0; } } </style>
 </body>
-</html>
+                                     </html>
+                                     
